syntax = "proto3";

package dotflik.protobuf.movie;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service MovieService {
  rpc GetMovies(google.protobuf.Empty) returns (stream Movie);
  rpc GetMovieById(GetMovieByIdRequest) returns (GetMovieByIdResponse);
  rpc GetMovieByTitle(GetMovieByTitleRequest) returns (GetMovieByIdResponse);
  rpc GetMoviesByYear(GetMoviesByYearRequest) returns (stream Movie);
  rpc GetMoviesByRating(GetMoviesByRatingRequest) returns (stream Movie);

  rpc RateMovie(RateMovieRequest) returns (google.protobuf.Empty);
}

message Movie {
  string id = 1;
  string title = 2;
  int32 year = 3;
  string director = 4;
  string banner_url = 5;
}

message GetMovieByIdRequest {
  string id = 1;
}

message GetMovieByIdResponse {
  Movie movie = 1;
}

message GetMovieByTitleRequest {
  string title = 1;
}

message GetMovieByTitleResponse {
  Movie movie = 1;
}

message GetMoviesByYearRequest {
  int32 from = 1;
  int32 to = 2;
}

message RateMovieRequest {
  string id = 1;
  float rating = 2;
}

message GetMoviesByRatingRequest {
  float rating_min = 1;
  float rating_max = 2;
  google.protobuf.Int32Value limit = 3;
}